# ntpclient-2010

./: CMakeLists.txt  Makefile  ntpclient.c  phaselock.c
test/: Makefile  ntpclient  ntpclient.h  test.cpp
